--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,7 @@
+
 language: java
-
-jdk: oraclejdk8
-
-
-sudo: required
-
-script: test.java
+script: mvn test
+after_success:
+  - mvn clean test jacoco:report coveralls:report
+jdk:
+  - oraclejdk8
