--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,7 @@
 
 language: java
-script: mvn test.java
-after_success:
-  - mvn clean test jacoco:report coveralls:report
+install: ant deps
+
 jdk:
   - oraclejdk8
+script: test.java
