--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,11 @@
-
 language: java
 
-jdk:
-  - oraclejdk8
-before_install:
-  - cd java
+sudo: false
+
+install: true
+
+jdk: oraclejdk8
+
+cache:
+  directories:
+    - '$HOME/.m2/repository'
