--- a/.travis.yml
+++ b/.travis.yml
@@ -7,3 +7,12 @@ install: true
 jdk: oraclejdk8
 
 script: mvn test
+
+
+notifications:
+  email:
+    - qureshm@tcd.ie
+    - erlist@tcd.ie
+    - eozoani@tcd.ie
+    - muganc@tcd.ie
+    - crawford@tcd.ie
