--- a/pom.xml
+++ b/pom.xml
@@ -13,8 +13,32 @@
   </dependencies>
 	
 	<build>
+	
+	
+	
 		<sourceDirectory>src/main/java</sourceDirectory>
 		<plugins>
+		
+		<plugin>
+			<artifactId>maven-assembly-plugin</artifactId>
+			<configuration>
+				<archive>
+					<manifest>
+						<mainClass>com.test.MainProgram</mainClass>
+					</manifest>
+				
+				</archive>
+				
+				<descriptorRefs>
+					<descriptorRef>jar-with-dependencies</descriptorRef>
+				
+				</descriptorRefs>
+			
+			</configuration>
+		
+		</plugin>
+		
+		
 			<plugin>
 				<groupId>org.jacoco</groupId>
 				<artifactId>jacoco-maven-plugin</artifactId>
